info: routing internal pages for better view

--- a/views/listings-summary.handlebars
+++ b/views/listings-summary.handlebars
@@ -5,9 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Listings Summary</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <style>
+      .link-page{
+        text-decoration: underline;
+        font-size: 24px;
+        text-align: center;
+        font-weight: bold;
+        color: #222;
+        display: block;
+        margin-top: 40px;
+      }
+    </style>
 </head>
 <body>
     <canvas id="listingsChart"></canvas>
+    <a class="link-page" href="/listings">Go to Table View</a>
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         const listingsSummary = JSON.parse('{{{listingsSummary}}}');
