--- a/views/listings-summary.handlebars
+++ b/views/listings-summary.handlebars
@@ -15,6 +15,10 @@
         display: block;
         margin-top: 40px;
       }
+      #listingsChart{
+        height: 75vh !important;
+
+      }
     </style>
 </head>
 <body>
